# project_template

./: .coverage-tmp.html  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  duties.py  index.html  mkdocs.yml  objects.inv  old_duties.py  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bandit.yml  blt.yml  build.yml  complete.yml  docs.yml  pdm.yml  pytest.yml  release.yml  ruff.yml  starter.yml  test.yml  update.yml  yapf.yml
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
credits/: index.html
design/: index.html
docs/: index.md
docs/scripts/: gen_ref_nav.py
license/: index.html
recipes/: index.html
reference/SUMMARY/: index.html
reference/project_template/: index.html
search/: search_index.json
src/project_template/: __init__.py
tests/: __init__.py  test_main.py
